--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^22.15.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
